# mtef3-to-mathml

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
mtef3_to_mathml/: __init__.py  char_replacer.py  main.py  mover.py  transform.xsl
mtef3_to_mathml/xsl/: arrow.xsl  box.xsl  char.xsl  embellishment.xsl  fence.xsl  frac.xsl  int.xsl  lim.xsl  long_division.xsl  long_embellishment.xsl  matrix.xsl  pile.xsl  product_coproduct.xsl  subsup.xsl  sum.xsl  union_intersection.xsl
tests/: test_char_replacer.py  test_integration.py  test_mover.py  test_xslt.py
tests/__snapshots__/: test_block_wrapper.expected.xml  test_char_before_subscript.expected.xml  test_char_before_superscript.expected.xml  test_digit_mathmode.expected.xml  test_embell_inversion.expected.xml  test_fraction.expected.xml  test_inline_wrapper.expected.xml  test_left_paren.expected.xml  test_letter_textmode.actual.xml  test_lscript_moves_following_char.expected.xml  test_lscript_moves_paren_group.expected.xml  test_lscript_no_following_sibling_unchanged.actual.xml  test_multiple_chars.actual.xml  test_no_preceding_sibling_unchanged.expected.xml  test_paren_group_before_subscript.expected.xml  test_plus_operator.expected.xml  test_sqrt.expected.xml  test_sub.actual.json  test_sub.expected.json  test_subscript.actual.xml  test_subsup.actual.json  test_subsup.expected.json  test_subsup.expected.xml  test_sum.actual.json  test_sum.expected.json  test_superscript.expected.xml  test_table1.actual.json  test_table1.expected.json  test_table2.actual.json  test_tmpl_before_subscript.expected.xml  (+3 more)
